--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^19.2.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
