--- a/package.json
+++ b/package.json
@@ -8,24 +8,21 @@
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.11.0",
-    "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
     "sass": "^1.97.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +43,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.19"
+    "@types/node": "^25.0.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "tailwindcss": "^3.4.19",
+    "vite": "^7.3.0"
   }
 }
