--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-fast-marquee": "^1.6.5",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.11.0",
     "react-type-animation": "^3.2.0",
     "sass": "^1.97.1",
